@@ -93,7 +93,7 @@ let create v =
 		file = "";
 		types = [];
 		modules = [];
-		flash_version = 8.;
+		flash_version = 10.;
 		resources = Hashtbl.create 0;
 		php_front = None;
 		swf_libs = [];
